--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name"          : "node-red-contrib-coffeescript",
-    "version"       : "0.0.1",
+    "version"       : "0.0.2",
     "description"   : "A Node-RED node to execute coffeescript",
     "dependencies"  : {
         "coffee-script"   : ""
@@ -9,7 +9,7 @@
         "type":"git",
         "url":"https://github.com/coderofsalvation/node-red-contrib-coffeescript"
     },
-    "license": "Apache-2.0",
+    "license": "BSD",
     "keywords": [ "node-red", "coffeescript" ],
     "node-red"      : {
         "nodes"     : {
