--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name"          : "node-red-contrib-coffeescript",
-    "version"       : "0.0.22",
+    "version"       : "0.0.221",
     "description"   : "A Node-RED node to execute coffeescript",
     "dependencies"  : {
         "coffee-script"   : ""
@@ -10,7 +10,7 @@
         "url":"https://github.com/coderofsalvation/node-red-contrib-coffeescript"
     },
     "license": "BSD",
-    "keywords": [ "node-red", "coffeescript" ],
+    "keywords": [ "node-red", "coffeescript","nodered","coffee","cs" ],
     "node-red"      : {
         "nodes"     : {
             "coffeescript": "81-coffee.js"
