--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name"          : "node-red-contrib-coffeescript",
-    "version"       : "0.0.221",
-    "description"   : "A Node-RED node to execute coffeescript",
+    "version"       : "0.0.23",
+    "description"   : "A Node-RED node to execute coffeescript (with support for both asynchronous and synchronously flows)",
     "dependencies"  : {
         "coffee-script"   : ""
     },
